fix tabbing issues in customstyles.css

--- a/portfolio/pom.xml
+++ b/portfolio/pom.xml
@@ -30,7 +30,7 @@
     </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>ffff
+      <artifactId>guava</artifactId>
       <version>11.0.2</version>
     </dependency>
     <dependency>
