add git ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,200 @@
 target/
 .idea
+        portfolio/.classpath
+        portfolio/.factorypath
+        portfolio/.project
+        portfolio/.settings/
+        walkthroughs/week-2-web-development/examples/stanley/.classpath
+        walkthroughs/week-2-web-development/examples/stanley/.project
+        walkthroughs/week-2-web-development/examples/stanley/.settings/
+        walkthroughs/week-3-server/examples/favorite-color/.classpath
+        walkthroughs/week-3-server/examples/favorite-color/.project
+        walkthroughs/week-3-server/examples/favorite-color/.settings/
+        walkthroughs/week-3-server/examples/form-submission/.classpath
+        walkthroughs/week-3-server/examples/form-submission/.project
+        walkthroughs/week-3-server/examples/form-submission/.settings/
+        walkthroughs/week-3-server/examples/page-view-counter/.classpath
+        walkthroughs/week-3-server/examples/page-view-counter/.project
+        walkthroughs/week-3-server/examples/page-view-counter/.settings/
+        walkthroughs/week-3-server/examples/random-quotes/.classpath
+        walkthroughs/week-3-server/examples/random-quotes/.project
+        walkthroughs/week-3-server/examples/random-quotes/.settings/
+        walkthroughs/week-3-server/examples/request-debugger/.classpath
+        walkthroughs/week-3-server/examples/request-debugger/.project
+        walkthroughs/week-3-server/examples/request-debugger/.settings/
+        walkthroughs/week-3-server/examples/server-stats/.classpath
+        walkthroughs/week-3-server/examples/server-stats/.project
+        walkthroughs/week-3-server/examples/server-stats/.settings/
+        walkthroughs/week-3-server/examples/subtraction-game/.classpath
+        walkthroughs/week-3-server/examples/subtraction-game/.project
+        walkthroughs/week-3-server/examples/subtraction-game/.settings/
+        walkthroughs/week-3-server/examples/text-processor/.classpath
+        walkthroughs/week-3-server/examples/text-processor/.project
+        walkthroughs/week-3-server/examples/text-processor/.settings/
+        walkthroughs/week-3-server/examples/todo-list/.classpath
+        walkthroughs/week-3-server/examples/todo-list/.factorypath
+        walkthroughs/week-3-server/examples/todo-list/.project
+        walkthroughs/week-3-server/examples/todo-list/.settings/
+        walkthroughs/week-4-libraries/authentication/examples/hello-world/.classpath
+        walkthroughs/week-4-libraries/authentication/examples/hello-world/.factorypath
+        walkthroughs/week-4-libraries/authentication/examples/hello-world/.project
+        walkthroughs/week-4-libraries/authentication/examples/hello-world/.settings/
+        walkthroughs/week-4-libraries/authentication/examples/shoutbox-v3/.classpath
+        walkthroughs/week-4-libraries/authentication/examples/shoutbox-v3/.factorypath
+        walkthroughs/week-4-libraries/authentication/examples/shoutbox-v3/.project
+        walkthroughs/week-4-libraries/authentication/examples/shoutbox-v3/.settings/
+        walkthroughs/week-4-libraries/authentication/examples/user-nicknames/.classpath
+        walkthroughs/week-4-libraries/authentication/examples/user-nicknames/.factorypath
+        walkthroughs/week-4-libraries/authentication/examples/user-nicknames/.project
+        walkthroughs/week-4-libraries/authentication/examples/user-nicknames/.settings/
+        walkthroughs/week-4-libraries/blobstore/examples/hello-world-fetch/.classpath
+        walkthroughs/week-4-libraries/blobstore/examples/hello-world-fetch/.factorypath
+        walkthroughs/week-4-libraries/blobstore/examples/hello-world-fetch/.project
+        walkthroughs/week-4-libraries/blobstore/examples/hello-world-fetch/.settings/
+        walkthroughs/week-4-libraries/blobstore/examples/hello-world-jsp/.classpath
+        walkthroughs/week-4-libraries/blobstore/examples/hello-world-jsp/.factorypath
+        walkthroughs/week-4-libraries/blobstore/examples/hello-world-jsp/.project
+        walkthroughs/week-4-libraries/blobstore/examples/hello-world-jsp/.settings/
+        walkthroughs/week-4-libraries/blobstore/examples/hello-world/.classpath
+        walkthroughs/week-4-libraries/blobstore/examples/hello-world/.factorypath
+        walkthroughs/week-4-libraries/blobstore/examples/hello-world/.project
+        walkthroughs/week-4-libraries/blobstore/examples/hello-world/.settings/
+        walkthroughs/week-4-libraries/charts/examples/bigfoot-sightings/.classpath
+        walkthroughs/week-4-libraries/charts/examples/bigfoot-sightings/.project
+        walkthroughs/week-4-libraries/charts/examples/bigfoot-sightings/.settings/
+        walkthroughs/week-4-libraries/charts/examples/favorite-colors/.classpath
+        walkthroughs/week-4-libraries/charts/examples/favorite-colors/.project
+        walkthroughs/week-4-libraries/charts/examples/favorite-colors/.settings/
+        walkthroughs/week-4-libraries/charts/examples/hello-world/.classpath
+        walkthroughs/week-4-libraries/charts/examples/hello-world/.project
+        walkthroughs/week-4-libraries/charts/examples/hello-world/.settings/
+        walkthroughs/week-4-libraries/image-analysis/examples/image-analyzer/.classpath
+        walkthroughs/week-4-libraries/image-analysis/examples/image-analyzer/.factorypath
+        walkthroughs/week-4-libraries/image-analysis/examples/image-analyzer/.project
+        walkthroughs/week-4-libraries/image-analysis/examples/image-analyzer/.settings/
+        walkthroughs/week-4-libraries/maps/examples/google-tour/.classpath
+        walkthroughs/week-4-libraries/maps/examples/google-tour/.project
+        walkthroughs/week-4-libraries/maps/examples/google-tour/.settings/
+        walkthroughs/week-4-libraries/maps/examples/hello-world/.classpath
+        walkthroughs/week-4-libraries/maps/examples/hello-world/.project
+        walkthroughs/week-4-libraries/maps/examples/hello-world/.settings/
+        walkthroughs/week-4-libraries/maps/examples/info-window/.classpath
+        walkthroughs/week-4-libraries/maps/examples/info-window/.project
+        walkthroughs/week-4-libraries/maps/examples/info-window/.settings/
+        walkthroughs/week-4-libraries/maps/examples/marker-storage/.classpath
+        walkthroughs/week-4-libraries/maps/examples/marker-storage/.factorypath
+        walkthroughs/week-4-libraries/maps/examples/marker-storage/.project
+        walkthroughs/week-4-libraries/maps/examples/marker-storage/.settings/
+        walkthroughs/week-4-libraries/maps/examples/marker/.classpath
+        walkthroughs/week-4-libraries/maps/examples/marker/.project
+        walkthroughs/week-4-libraries/maps/examples/marker/.settings/
+        walkthroughs/week-4-libraries/maps/examples/ufos/.classpath
+        walkthroughs/week-4-libraries/maps/examples/ufos/.project
+        walkthroughs/week-4-libraries/maps/examples/ufos/.settings/
+        walkthroughs/week-4-libraries/sentiment-analysis/examples/sentiment-analyzer/.classpath
+        walkthroughs/week-4-libraries/sentiment-analysis/examples/sentiment-analyzer/.project
+        walkthroughs/week-4-libraries/sentiment-analysis/examples/sentiment-analyzer/.settings/
+        walkthroughs/week-4-libraries/translation/examples/minimal-google-translate/.classpath
+        walkthroughs/week-4-libraries/translation/examples/minimal-google-translate/.project
+ walkthroughs/week-5-tdd/intro/.settings/
+.gitignore.swp
+portfolio/.classpath
+portfolio/.factorypath
+portfolio/.project
+portfolio/.settings/
+walkthroughs/week-2-web-development/examples/stanley/.classpath
+walkthroughs/week-2-web-development/examples/stanley/.project
+walkthroughs/week-2-web-development/examples/stanley/.settings/
+walkthroughs/week-3-server/examples/favorite-color/.classpath
+walkthroughs/week-3-server/examples/favorite-color/.project
+walkthroughs/week-3-server/examples/favorite-color/.settings/
+walkthroughs/week-3-server/examples/form-submission/.classpath
+walkthroughs/week-3-server/examples/form-submission/.project
+walkthroughs/week-3-server/examples/form-submission/.settings/
+walkthroughs/week-3-server/examples/page-view-counter/.classpath
+walkthroughs/week-3-server/examples/page-view-counter/.project
+walkthroughs/week-3-server/examples/page-view-counter/.settings/
+walkthroughs/week-3-server/examples/random-quotes/.classpath
+walkthroughs/week-3-server/examples/random-quotes/.project
+walkthroughs/week-3-server/examples/random-quotes/.settings/
+walkthroughs/week-3-server/examples/request-debugger/.classpath
+walkthroughs/week-3-server/examples/request-debugger/.project
+walkthroughs/week-3-server/examples/request-debugger/.settings/
+walkthroughs/week-3-server/examples/server-stats/.classpath
+walkthroughs/week-3-server/examples/server-stats/.project
+walkthroughs/week-3-server/examples/server-stats/.settings/
+walkthroughs/week-3-server/examples/subtraction-game/.classpath
+walkthroughs/week-3-server/examples/subtraction-game/.project
+walkthroughs/week-3-server/examples/subtraction-game/.settings/
+walkthroughs/week-3-server/examples/text-processor/.classpath
+walkthroughs/week-3-server/examples/text-processor/.project
+walkthroughs/week-3-server/examples/text-processor/.settings/
+walkthroughs/week-3-server/examples/todo-list/.classpath
+walkthroughs/week-3-server/examples/todo-list/.factorypath
+walkthroughs/week-3-server/examples/todo-list/.project
+walkthroughs/week-3-server/examples/todo-list/.settings/
+walkthroughs/week-4-libraries/authentication/examples/hello-world/.classpath
+walkthroughs/week-4-libraries/authentication/examples/hello-world/.factorypath
+walkthroughs/week-4-libraries/authentication/examples/hello-world/.project
+walkthroughs/week-4-libraries/authentication/examples/hello-world/.settings/
+walkthroughs/week-4-libraries/authentication/examples/shoutbox-v3/.classpath
+walkthroughs/week-4-libraries/authentication/examples/shoutbox-v3/.factorypath
+walkthroughs/week-4-libraries/authentication/examples/shoutbox-v3/.project
+walkthroughs/week-4-libraries/authentication/examples/shoutbox-v3/.settings/
+walkthroughs/week-4-libraries/authentication/examples/user-nicknames/.classpath
+walkthroughs/week-4-libraries/authentication/examples/user-nicknames/.factorypath
+walkthroughs/week-4-libraries/authentication/examples/user-nicknames/.project
+walkthroughs/week-4-libraries/authentication/examples/user-nicknames/.settings/
+walkthroughs/week-4-libraries/blobstore/examples/hello-world-fetch/.classpath
+walkthroughs/week-4-libraries/blobstore/examples/hello-world-fetch/.factorypath
+walkthroughs/week-4-libraries/blobstore/examples/hello-world-fetch/.project
+walkthroughs/week-4-libraries/blobstore/examples/hello-world-fetch/.settings/
+walkthroughs/week-4-libraries/blobstore/examples/hello-world-jsp/.classpath
+walkthroughs/week-4-libraries/blobstore/examples/hello-world-jsp/.factorypath
+walkthroughs/week-4-libraries/blobstore/examples/hello-world-jsp/.project
+walkthroughs/week-4-libraries/blobstore/examples/hello-world-jsp/.settings/
+walkthroughs/week-4-libraries/blobstore/examples/hello-world/.classpath
+walkthroughs/week-4-libraries/blobstore/examples/hello-world/.factorypath
+walkthroughs/week-4-libraries/blobstore/examples/hello-world/.project
+walkthroughs/week-4-libraries/blobstore/examples/hello-world/.settings/
+walkthroughs/week-4-libraries/charts/examples/bigfoot-sightings/.classpath
+walkthroughs/week-4-libraries/charts/examples/bigfoot-sightings/.project
+walkthroughs/week-4-libraries/charts/examples/bigfoot-sightings/.settings/
+walkthroughs/week-4-libraries/charts/examples/favorite-colors/.classpath
+walkthroughs/week-4-libraries/charts/examples/favorite-colors/.project
+walkthroughs/week-4-libraries/charts/examples/favorite-colors/.settings/
+walkthroughs/week-4-libraries/charts/examples/hello-world/.classpath
+walkthroughs/week-4-libraries/charts/examples/hello-world/.project
+walkthroughs/week-4-libraries/charts/examples/hello-world/.settings/
+walkthroughs/week-4-libraries/image-analysis/examples/image-analyzer/.classpath
+walkthroughs/week-4-libraries/image-analysis/examples/image-analyzer/.factorypath
+walkthroughs/week-4-libraries/image-analysis/examples/image-analyzer/.project
+walkthroughs/week-4-libraries/image-analysis/examples/image-analyzer/.settings/
+walkthroughs/week-4-libraries/maps/examples/google-tour/.classpath
+walkthroughs/week-4-libraries/maps/examples/google-tour/.project
+walkthroughs/week-4-libraries/maps/examples/google-tour/.settings/
+walkthroughs/week-4-libraries/maps/examples/hello-world/.classpath
+walkthroughs/week-4-libraries/maps/examples/hello-world/.project
+walkthroughs/week-4-libraries/maps/examples/hello-world/.settings/
+walkthroughs/week-4-libraries/maps/examples/info-window/.classpath
+walkthroughs/week-4-libraries/maps/examples/info-window/.project
+walkthroughs/week-4-libraries/maps/examples/info-window/.settings/
+walkthroughs/week-4-libraries/maps/examples/marker-storage/.classpath
+walkthroughs/week-4-libraries/maps/examples/marker-storage/.factorypath
+walkthroughs/week-4-libraries/maps/examples/marker-storage/.project
+walkthroughs/week-4-libraries/maps/examples/marker-storage/.settings/
+walkthroughs/week-4-libraries/maps/examples/marker/.classpath
+walkthroughs/week-4-libraries/maps/examples/marker/.project
+walkthroughs/week-4-libraries/maps/examples/marker/.settings/
+walkthroughs/week-4-libraries/maps/examples/ufos/.classpath
+walkthroughs/week-4-libraries/maps/examples/ufos/.project
+walkthroughs/week-4-libraries/maps/examples/ufos/.settings/
+walkthroughs/week-4-libraries/sentiment-analysis/examples/sentiment-analyzer/.classpath
+walkthroughs/week-4-libraries/sentiment-analysis/examples/sentiment-analyzer/.project
+walkthroughs/week-4-libraries/sentiment-analysis/examples/sentiment-analyzer/.settings/
+walkthroughs/week-4-libraries/translation/examples/minimal-google-translate/.classpath
+walkthroughs/week-4-libraries/translation/examples/minimal-google-translate/.project
+walkthroughs/week-4-libraries/translation/examples/minimal-google-translate/.settings/
+walkthroughs/week-5-tdd/intro/.classpath
+walkthroughs/week-5-tdd/intro/.project
+walkthroughs/week-5-tdd/intro/.settings/
