--- a/portfolio/pom.xml
+++ b/portfolio/pom.xml
@@ -49,7 +49,7 @@
         <artifactId>appengine-maven-plugin</artifactId>
         <version>2.2.0</version>
         <configuration>
-          <deploy.projectId>ntarn-step-2020</deploy.projectId>
+          <deploy.projectId>natalietarn</deploy.projectId>
           <deploy.version>1</deploy.version>
           <port>4503</port>
         </configuration>
